--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,18 +1,20 @@
-.nav-link{
-    color: #000;
+@import url('../styles/Colors.css');
+
+.nav-link {
+    color: var(--primary-foreground-color);
 }
 
-.nav-link:hover{
-    color: #757575 !important;
+.nav-link:hover {
+    color: var(--secondary-foreground-color) !important;
     text-decoration: none !important;
 }
 
-.sign-up-btn{
-    background-color: #000 !important;
-    color: #fff !important;
+.sign-up-btn {
+    background-color: var(--primary-foreground-color) !important;
+    color: var(--primary-background-color) !important;
 }
 
-.sign-up-btn:hover{
-    color: #000 !important;
-    background-color: #ebebeb !important;
+.sign-up-btn:hover {
+    color: var(--primary-foreground-color) !important;
+    background-color: var(--secondary-background-color) !important;
 }
