--- a/client/src/components/authentication/Login.css
+++ b/client/src/components/authentication/Login.css
@@ -1,4 +1,6 @@
-.login-input:focus{
-    border-color: #000 !important;
-    box-shadow: 0 0 0 1px #000 !important;
+@import url('../../styles/Colors.css');
+
+.login-input:focus {
+    border-color: var(--primary-foreground-color) !important;
+    box-shadow: 0 0 0 1px var(--primary-foreground-color) !important;
 }
