--- a/client/src/components/dashboard/barber/CreateShop.css
+++ b/client/src/components/dashboard/barber/CreateShop.css
@@ -1,18 +1,20 @@
-.shop-input:focus{
-    border-color: #000 !important;
-    box-shadow: 0 0 0 1px #000 !important;
+@import url('../../../styles/Colors.css');
+
+.shop-input:focus {
+  border-color: var(--primary-foreground-color) !important;
+  box-shadow: 0 0 0 1px var(--primary-foreground-color) !important;
 }
 
-.input-time{
-    display: flex;
-    align-items: center;
-    border-radius: 0.375rem;        
-    box-shadow: 0 0 0 1px #cbd5e0;  
-    padding: 0.4rem 1rem;              
+.input-time {
+  display: flex;
+  align-items: center;
+  border-radius: 0.375rem;
+  box-shadow: 0 0 0 1px #cbd5e0;
+  padding: 0.4rem 1rem;
 }
 
-.input-time p{
-    color: #999999;
+.input-time p {
+  color: #999999;
 }
 
 .custom-timepicker {
@@ -20,8 +22,7 @@
 }
 
 .custom-timepicker .react-time-picker__wrapper {
-  border: none !important;        
-  background-color: white;        
+  border: none !important;
+  background-color: white;
   width: 100%;
 }
-
