--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,11 @@
   background-color: var(--secondary-background-color) !important;
 }
 
+.custom-input:focus {
+  border-color: var(--primary-foreground-color) !important;
+  box-shadow: 0 0 0 1px var(--primary-foreground-color) !important;
+}
+
 .cancel-btn:hover {
   background-color: var(--secondary-background-color) !important;
 }
