--- a/client/src/styles/Colors.css
+++ b/client/src/styles/Colors.css
@@ -3,4 +3,5 @@
     --secondary-foreground-color: #757575;
     --primary-background-color: #fff;
     --secondary-background-color: #ebebeb;
+    --primary-shadow-color: #44444433
 }
